examples/test/testpolicy3264.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3264
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key48: value41
      key28: value24
      key42: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value35
      podSelector:
        matchLabels:
          key12: value15
